--- a/index.html
+++ b/index.html
@@ -156,6 +156,20 @@ img {
 <td align="left">3</td>
 <td align="left">2016-01-06</td>
 <td align="left">Module 7</td>
+<td align="left"><a href="Data_Classes/lecture/Data_Classes.html">HTML</a>, <a href="Data_Classes/lecture/Data_Classes.pdf">PDF</a>, <a href="Data_Classes/lecture/Data_Classes.R">Code</a></td>
+<td align="left">Data Classes</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
+<td align="left">2016-01-06</td>
+<td align="left">Module 8</td>
+<td align="left"><a href="Data_Cleaning/lecture/Data_Cleaning.html">HTML</a>, <a href="Data_Cleaning/lecture/Data_Cleaning.pdf">PDF</a>, <a href="Data_Cleaning/lecture/Data_Cleaning.R">Code</a>, <a href="Data_Cleaning/lab/Data_Cleaning_Lab.R">Lab</a></td>
+<td align="left">Data Cleaning</td>
+</tr>
+<tr class="odd">
+<td align="left">3</td>
+<td align="left">2016-01-06</td>
+<td align="left">Module 9</td>
 <td align="left"><a href="Knitr/lecture/Knitr.html">HTML</a>, <a href="Knitr/lecture/Knitr.pdf">PDF</a>, <a href="Knitr/lecture/Knitr.Rmd">Code</a>, <a href="Knitr/lab/illusion.Rmd">Lab</a></td>
 <td align="left">Reproducible Research</td>
 </tr>
@@ -189,7 +203,7 @@ img {
 | 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-05 11:45:42 Eastern Time.</p>
+<p>This page was last updated on 2016-01-06 08:30:21 Eastern Time.</p>
 </div>
 </div>
 
