--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@ img {
 <td align="left">Reproducible Research</td>
 </tr>
 <tr class="even">
+<td align="left">3</td>
+<td align="left">2016-01-06</td>
+<td align="left">Homework 3</td>
+<td align="left"><a href="HW/homework3.R">HW</a></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
 <td align="left">—</td>
 <td align="left">—</td>
 <td align="left">—</td>
@@ -203,7 +210,7 @@ img {
 | 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-06 08:30:21 Eastern Time.</p>
+<p>This page was last updated on 2016-01-06 10:52:46 Eastern Time.</p>
 </div>
 </div>
 
