--- a/Statistics/lecture/Statistics.html
+++ b/Statistics/lecture/Statistics.html
@@ -351,13 +351,13 @@ IsBadBuy    -537.8033  19.825525 -27.12681 3.01661e-161</pre>
 <pre class = 'prettyprint lang-r'>fit = lm(VehOdo~VehicleAge, data=cars)
 print(fit)</pre>
 
-<pre >
-Call:
-lm(formula = VehOdo ~ VehicleAge, data = cars)
-
-Coefficients:
-(Intercept)   VehicleAge  
-      60127         2723  </pre>
+<pre >## 
+## Call:
+## lm(formula = VehOdo ~ VehicleAge, data = cars)
+## 
+## Coefficients:
+## (Intercept)   VehicleAge  
+##       60127         2723</pre>
 
 </article></slide><slide class=''><hgroup><h2>Linear Regression</h2></hgroup><article  id="linear-regression-6">
 
