--- a/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html
+++ b/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html
@@ -116,8 +116,20 @@
 
 </article></slide><slide class=''><hgroup><h2>Load the packages/libraries</h2></hgroup><article  id="load-the-packageslibraries">
 
-<pre class = 'prettyprint lang-r'>library(dplyr)
-library(tidyr)</pre>
+<pre class = 'prettyprint lang-r'>library(dplyr)</pre>
+
+<pre >
+Attaching package: &#39;dplyr&#39;
+
+The following objects are masked from &#39;package:stats&#39;:
+
+    filter, lag
+
+The following objects are masked from &#39;package:base&#39;:
+
+    intersect, setdiff, setequal, union</pre>
+
+<pre class = 'prettyprint lang-r'>library(tidyr)</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data used: Charm City Circulator</h2></hgroup><article  id="data-used-charm-city-circulator">
 
@@ -178,9 +190,7 @@ colnames(ex_data) = cn</pre>
 
 <pre class = 'prettyprint lang-r'>ex_data$daily = NULL</pre>
 
-</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Reshaping data from wide (fat) to long (tall)</h2></hgroup><article  id="reshaping-data-from-wide-fat-to-long-tall">
-
-</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Resources</h2></hgroup><article  id="resources">
+</article></slide><slide class=''><hgroup><h2>Reshaping data from wide (fat) to long (tall)</h2></hgroup><article  id="reshaping-data-from-wide-fat-to-long-tall">
 
 <p>See <a href='http://www.cookbook-r.com/Manipulating_data/Converting_data_between_wide_and_long_format/' title=''>http://www.cookbook-r.com/Manipulating_data/Converting_data_between_wide_and_long_format/</a></p>
 
@@ -245,8 +255,6 @@ banner  green orange purple
 Alightings    Average  Boardings 
       4584       4584       4584 </pre>
 
-</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Reshaping data from long (tall) to wide (fat)</h2></hgroup><article  id="reshaping-data-from-long-tall-to-wide-fat">
-
 </article></slide><slide class=''><hgroup><h2>Reshaping data from long (tall) to wide (fat): tidyr</h2></hgroup><article  id="reshaping-data-from-long-tall-to-wide-fat-tidyr">
 
 <p>In <code>tidyr</code>, the <code>spread</code> function spreads rows into columns. Now we have a long data set, but we want to separate the Average, Alightings and Boardings into different columns:</p>
@@ -305,8 +313,6 @@ head(wide)</pre>
 5 Friday 2010-02-12 orange        678   671.0       664
 6 Friday 2010-02-19 orange       1647  1642.0      1637</pre>
 
-</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Merging Data</h2></hgroup><article  id="merging-data">
-
 </article></slide><slide class=''><hgroup><h2>Data Merging/Append in Base R</h2></hgroup><article  id="data-mergingappend-in-base-r">
 
 <ul>
@@ -338,6 +344,8 @@ visits[1:2,]</pre>
 1  1     1 10.00000
 2  2     2 11.73913</pre>
 
+</article></slide><slide class=''><hgroup><h2>Merging</h2></hgroup><article  id="merging-1" class="smaller">
+
 <pre class = 'prettyprint lang-r'>merged.data &lt;- merge(base, visits, by=&quot;id&quot;)
 merged.data[1:5,]</pre>
 
@@ -351,6 +359,8 @@ merged.data[1:5,]</pre>
 <pre class = 'prettyprint lang-r'>dim(merged.data)</pre>
 
 <pre >[1] 24  4</pre>
+
+</article></slide><slide class=''><hgroup><h2>Merging</h2></hgroup><article  id="merging-2" class="smaller">
 
 <pre class = 'prettyprint lang-r'>all.data &lt;- merge(base, visits, by=&quot;id&quot;, all=TRUE)
 tail(all.data)</pre>
@@ -434,8 +444,6 @@ tail(all.data)</pre>
 25  9 59.44444    NA       NA
 26 10 60.00000    NA       NA</pre>
 
-</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Perform Operations By Groups of Variables</h2></hgroup><article  id="perform-operations-by-groups-of-variables">
-
 </article></slide><slide class=''><hgroup><h2>Perform Operations By Groups: base R</h2></hgroup><article  id="perform-operations-by-groups-base-r">
 
 <p>The <code>tapply</code> command will take in a vector (<code>X</code>), perform a function (<code>FUN</code>) over an index (<code>INDEX</code>):</p>
@@ -461,8 +469,14 @@ NULL</pre>
 <pre class = 'prettyprint lang-r'>gb = group_by(wide, line)
 summarize(gb, mean_avg = mean(Average))</pre>
 
-<pre >  mean_avg
-1 2984.526</pre>
+<pre >Source: local data frame [4 x 2]
+
+    line  mean_avg
+   (chr)     (dbl)
+1 banner  827.2685
+2  green 1957.7814
+3 orange 3033.1611
+4 purple 4016.9345</pre>
 
 </article></slide><slide class=''><hgroup><h2>Perform Operations By Groups: dplyr with piping</h2></hgroup><article  id="perform-operations-by-groups-dplyr-with-piping">
 
@@ -472,8 +486,14 @@ summarize(gb, mean_avg = mean(Average))</pre>
   group_by(line) %&gt;%
   summarise(mean_avg = mean(Average))</pre>
 
-<pre >  mean_avg
-1 2984.526</pre>
+<pre >Source: local data frame [4 x 2]
+
+    line  mean_avg
+   (chr)     (dbl)
+1 banner  827.2685
+2  green 1957.7814
+3 orange 3033.1611
+4 purple 4016.9345</pre>
 
 </article></slide><slide class=''><hgroup><h2>Perform Operations By Multiple Groups: dplyr</h2></hgroup><article  id="perform-operations-by-multiple-groups-dplyr">
 
@@ -485,8 +505,24 @@ wide %&gt;%
   group_by(line, year) %&gt;%
   summarise(mean_avg = mean(Average))</pre>
 
-<pre >  mean_avg
-1 2984.526</pre>
+<pre >Source: local data frame [13 x 3]
+Groups: line [?]
+
+     line  year  mean_avg
+    (chr) (dbl)     (dbl)
+1  banner  2012  882.0929
+2  banner  2013  635.3833
+3   green  2011 1455.1667
+4   green  2012 2028.7740
+5   green  2013 2028.5250
+6  orange  2010 1890.7859
+7  orange  2011 3061.6556
+8  orange  2012 4046.4082
+9  orange  2013 3322.6250
+10 purple  2010 2577.1000
+11 purple  2011 4026.9146
+12 purple  2012 4811.0068
+13 purple  2013 4045.3833</pre>
 
 </article></slide><slide class=''><hgroup><h2>Perform Operations By Multiple Groups: dplyr</h2></hgroup><article  id="perform-operations-by-multiple-groups-dplyr-1" class="smaller">
 
