--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ img {
 <td align="left">3</td>
 <td align="left">2016-01-06</td>
 <td align="left">Module 8</td>
-<td align="left"><a href="Data_Cleaning/lecture/Data_Cleaning.html">HTML</a>, <a href="Data_Cleaning/lecture/Data_Cleaning.pdf">PDF</a>, <a href="Data_Cleaning/lecture/Data_Cleaning.R">Code</a>, <a href="Data_Cleaning/lab/Data_Cleaning_Lab.R">Lab</a></td>
+<td align="left"><a href="Data_Cleaning/lecture/Data_Cleaning.html">HTML</a>, <a href="Data_Cleaning/lecture/Data_Cleaning.pdf">PDF</a>, <a href="Data_Cleaning/lecture/Data_Cleaning.R">Code</a>, <a href="Data_Cleaning/lab/Data_Cleaning_Lab.R">Lab</a>, <a href="Data_Cleaning/lab/Data_Cleaning_Lab_Key.R">Key</a></td>
 <td align="left">Data Cleaning</td>
 </tr>
 <tr class="odd">
@@ -184,7 +184,7 @@ img {
 <td align="left">4</td>
 <td align="left">2016-01-06</td>
 <td align="left">Module 10</td>
-<td align="left"><a href="Data_Visualization/lecture/Data_Visualization.html">HTML</a>, <a href="Data_Visualization/lecture/Data_Visualization.pdf">PDF</a>, <a href="Data_Visualization/lecture/Data_Visualization.R">Code</a>, <a href="Data_Visualization/lab/Data_Visualization_Lab.R">Lab</a></td>
+<td align="left"><a href="Data_Visualization/lecture/Data_Visualization.html">HTML</a>, <a href="Data_Visualization/lecture/Data_Visualization.pdf">PDF</a>, <a href="Data_Visualization/lecture/Data_Visualization.R">Code</a>, <a href="Data_Visualization/lab/Data_Visualization_Lab.R">Lab</a>, <a href="Data_Visualization/lab/Data_Visualization_Lab_Key.R">Key</a></td>
 <td align="left">Data Visualization</td>
 </tr>
 <tr class="even">
@@ -224,7 +224,7 @@ img {
 | 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-06 22:43:41 Eastern Time.</p>
+<p>This page was last updated on 2016-01-07 19:43:14 Eastern Time.</p>
 </div>
 </div>
 
