big push for last day

--- a/index.html
+++ b/index.html
@@ -132,25 +132,39 @@ img {
 <td align="left">Data Import/Output</td>
 </tr>
 <tr class="even">
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+</tr>
+<tr class="odd">
 <td align="left">2</td>
 <td align="left">2016-01-05</td>
 <td align="left">Homework 2</td>
 <td align="left"><a href="HW/homework2.R">HW</a></td>
 <td align="left"></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2</td>
 <td align="left">2016-01-05</td>
 <td align="left">Module 5</td>
 <td align="left"><a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html">HTML</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf">PDF</a>, <a href="Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R">Code</a>, <a href="Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab.R">Lab</a>, <a href="Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab_Key.R">Key</a></td>
 <td align="left">Subsetting Data</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2</td>
 <td align="left">2016-01-05</td>
 <td align="left">Module 6</td>
 <td align="left"><a href="Data_Summarization/lecture/Data_Summarization.html">HTML</a>, <a href="Data_Summarization/lecture/Data_Summarization.pdf">PDF</a>, <a href="Data_Summarization/lecture/Data_Summarization.R">Code</a>, <a href="Data_Summarization/lab/Data_Summarization_Lab.R">Lab</a>, <a href="Data_Summarization/lab/Data_Summarization_Lab_Key.R">Key</a></td>
 <td align="left">Data Summarization</td>
+</tr>
+<tr class="even">
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
 </tr>
 <tr class="odd">
 <td align="left">3</td>
@@ -174,27 +188,62 @@ img {
 <td align="left"></td>
 </tr>
 <tr class="even">
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+</tr>
+<tr class="odd">
 <td align="left">4</td>
-<td align="left">2016-01-06</td>
+<td align="left">2016-01-07</td>
 <td align="left">Module 9</td>
 <td align="left"><a href="Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html">HTML</a>, <a href="Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.pdf">PDF</a>, <a href="Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.R">Code</a></td>
 <td align="left">Data Manipulation</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">4</td>
-<td align="left">2016-01-06</td>
+<td align="left">2016-01-07</td>
 <td align="left">Module 10</td>
 <td align="left"><a href="Data_Visualization/lecture/Data_Visualization.html">HTML</a>, <a href="Data_Visualization/lecture/Data_Visualization.pdf">PDF</a>, <a href="Data_Visualization/lecture/Data_Visualization.R">Code</a>, <a href="Data_Visualization/lab/Data_Visualization_Lab.R">Lab</a>, <a href="Data_Visualization/lab/Data_Visualization_Lab_key.R">Key</a></td>
 <td align="left">Data Visualization</td>
 </tr>
+<tr class="odd">
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+<td align="left">—</td>
+</tr>
 <tr class="even">
-<td align="left">4</td>
-<td align="left">2016-01-06</td>
+<td align="left">5</td>
+<td align="left">2016-01-08</td>
 <td align="left">Module 11</td>
+<td align="left"><a href="Statistics/lecture/Statistics.html">HTML</a>, <a href="Statistics/lecture/Statistics.pdf">PDF</a>, <a href="Statistics/lecture/Statistics.R">Code</a></td>
+<td align="left">Statistics</td>
+</tr>
+<tr class="odd">
+<td align="left">5</td>
+<td align="left">2016-01-08</td>
+<td align="left">Module 12</td>
+<td align="left"><a href="Functions/lecture/Functions.html">HTML</a>, <a href="Functions/lecture/Functions.pdf">PDF</a>, <a href="Functions/lecture/Functions.R">Code</a></td>
+<td align="left">Functions</td>
+</tr>
+<tr class="even">
+<td align="left">5</td>
+<td align="left">2016-01-08</td>
+<td align="left">Module 13</td>
 <td align="left"><a href="Knitr/lecture/Knitr.html">HTML</a>, <a href="Knitr/lecture/Knitr.pdf">PDF</a>, <a href="Knitr/lecture/Knitr.Rmd">Code</a>, <a href="Knitr/lab/illusion.Rmd">Lab</a></td>
 <td align="left">Reproducible Research</td>
 </tr>
 <tr class="odd">
+<td align="left">5</td>
+<td align="left">2016-01-08</td>
+<td align="left">HW Review</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
 <td align="left">—</td>
 <td align="left">—</td>
 <td align="left">—</td>
@@ -203,28 +252,8 @@ img {
 </tr>
 </tbody>
 </table>
-<!-- 
-|---|---|---|---|---|
-| 3  | 2016-06-17  | Homework 3  | [HW](hw/homework3.R) | Homework |
-| 3  | 2016-06-17  | Module 7  | [lecSlides](modules/module7.html), [lecNotes](modules/module7.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module7.R), [lab](labs/module7_lab.R), [key](labs/module7_lab_key.R)  | Summarization |
-| 3  | 2016-06-17  | Module 8  | [lecSlides](modules/module8.html), [lecNotes](modules/module8.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module8.R), [lab](labs/module8_lab.R), [key](labs/module8_lab_key.R)  | Visualization |
-|---|---|---|---|---|
-| 4  | 2016-06-18  | Module 9  | [lecSlides](modules/module9.html), [lecNotes](modules/module9.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module9.R), [lab](labs/module9_lab.R), [key](labs/module9_lab_key.R)  | Data cleaning |
-| 4  | 2016-06-18  | Module 10  | [lecSlides](modules/module10.html), [lecNotes](modules/module10.pdf),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module10.R) | Lists and functions |
-| 4  | 2016-06-18  | Module 11  | [lecSlides](modules/module11.html), [lecNotes](modules/module11.pdf),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module11.R) | Statistics |
-|---|---|---|---|---|
-| 5  | 2016-06-19  | Module 12 lecture | [lecSlides](modules/module12.html), [lecNotes](modules/module12.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module12.R)  | Reproducible research  |
-| 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html)  | Reproducible research (practical) |
-| 5  | 2016-06-19  | Module 13  | [lecSlides](modules/mapping_module.html),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/mapping_module.R), [lab](labs/mapping_module_lab.R) | Mapping Tools  |
-
-<!-- Add links to the rest of the material as we go
-
-| 5  | 2016-06-19  | Module X  | [lecSlides](modules/moduleX.html), [code](), [lab](), [key]()  |   |
-
-| 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
--->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-07 19:44:30 Eastern Time.</p>
+<p>This page was last updated on 2016-01-07 22:40:09 Eastern Time.</p>
 </div>
 </div>
 
