--- a/index.html
+++ b/index.html
@@ -232,18 +232,25 @@ img {
 <tr class="even">
 <td align="left">5</td>
 <td align="left">2016-01-08</td>
-<td align="left">Module 13</td>
+<td align="left">Module 13a</td>
 <td align="left"><a href="Knitr/lecture/Knitr.html">HTML</a>, <a href="Knitr/lecture/Knitr.pdf">PDF</a>, <a href="Knitr/lecture/Knitr.Rmd">Code</a>, <a href="Knitr/lab/illusion.Rmd">Lab</a></td>
-<td align="left">Reproducible Research</td>
+<td align="left">Reproducible Research (A)</td>
 </tr>
 <tr class="odd">
+<td align="left">5</td>
+<td align="left">2016-01-08</td>
+<td align="left">Module 13b</td>
+<td align="left"><a href="Simple_Knitr/lecture/Simple_Knitr.html">HTML</a>, <a href="Simple_Knitr/lecture/Simple_Knitr.pdf">PDF</a>, <a href="Simple_Knitr/lecture/Simple_Knitr.Rmd">Code</a></td>
+<td align="left">Reproducible Research (B)</td>
+</tr>
+<tr class="even">
 <td align="left">5</td>
 <td align="left">2016-01-08</td>
 <td align="left">HW Review</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">—</td>
 <td align="left">—</td>
 <td align="left">—</td>
@@ -253,7 +260,7 @@ img {
 </tbody>
 </table>
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-07 22:40:09 Eastern Time.</p>
+<p>This page was last updated on 2016-01-19 10:20:31 Eastern Time.</p>
 </div>
 </div>
 
